fixes,features,refactor and docs: kSNP3, Parsnp.py, workflowmanager.sh, parsnp/build_parsnp_nix.sh, snp_comparator.py, .gitignore
features:
workflowmanager.sh
	1.  -> subshells/process logging structure:
	date-run(format: date +"%Y-%b-%d-%H:%M")
	workflowmanager.sh
		stdout
		stderr
		parsnp/
			parsnp.log.stdout
			parsnp.log.stderr
		ksnp/
			ksnp.log.stdout
			ksnp.log.stderr
		tool..n/
			stdout
			stderr
	2. Checks if executables exists and if they are in the right format, if not they are compiled.

parsnp/build_parsnp_nix.sh
	1. adds error to workflowmanager.sh's stderr + exit code 1 so workflomanager stops rest of script if this breaks.

refactored:
ksnp/kSNP3
	1. checkFileNames removed, only hinders usage genome files. No "limitations" 		found later on in the program if files break these rules.
	2. kSNP_SNP_POS_extracter.py is now executed in parallel with the calculation 		of ML tree as a subshell(()&).
	3. General structure for output ending in kSNP3's $dir aka ksnp_output.
		parsnp/Parsnp.py

parsnp/Parsnp.py
	1. parsnp_SNP_POS_extracter.py now uses subprocess.Popen.wait() instead of 			communicate(). No point in communicating if the process doesnt return wrong error code which is check in tandem with p.wait() which returns the returnvalue of the process.
	2. parsnp_SNP_POS_extracter.py puts results in $parsnp_output

snp_comparator.py
	1. JSON SNP stats are indented, provided utf8 encoding and sorted=False.

workflowmanager.sh
	1. creates output directories in advance so they are ready for tool output before execution, more configurable if the parent process control this.¨

fix:
.gitignore time module logs

workflowmanager.sh
 	1. A flag which indicates whether or not parsnp was compiled.
 	2. error detection on parsnp and kSNP modules, also saves the exit statues in a value right after the wait command in order to print it for better debugging otherwise it is lost.
Parsnp.py
	1. Removing old galaxy dependency on inputdir which were given as one comma se

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ ksnp/ksnp_output/*
 ksnp/result_folder/*
 stdout.txt
 results/*
+timings/*
+!timings/gnu-time-examples.man
+
 
 
 #parsnp without compile files
@@ -47,7 +50,7 @@ parsnp/muscle/libMUSCLE/.deps/
 parsnp/muscle/libMUSCLE/libMUSCLE-3.7.la
 parsnp/muscle/libMUSCLE/muscle
 parsnp/muscle/configure
-
+parsnp/config.log
 
 parsnp/Makefile
 parsnp/Makefile.in
