--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ ksnp/ksnp_output/*
 parsnp_mac/parsnp_output/*
 parsnp_linux/parsnp_output/*
 ksnp/ksnp_output/*
+parsnp/parsnp_output/*
 ksnp/result_folder/*
 stdout.txt
 results/*
