--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ timings/*
 ksnp/logs/*
 parsnp/logs/*
 evolve_genome/*.pyc
+evolve_genome/output/
+evolve_genome/genomes/
 
 #parsnp without compile files
 #compile files
